syntax = "proto3";

package altalune.v1;

option go_package = "github.com/hrz8/altalune/gen/altalune/v1;altalunev1";

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";
import "altalune/v1/common.proto";

// Role represents a system-wide role that can be assigned to users
message Role {
  string id = 1;                                    // Public nanoid (14 chars)
  string name = 2;                                  // Unique role name
  string description = 3;                           // Optional description
  google.protobuf.Timestamp created_at = 98;
  google.protobuf.Timestamp updated_at = 99;
}

// QueryRolesRequest for listing/searching roles
message QueryRolesRequest {
  QueryRequest query = 1;
}

// QueryRolesResponse with role list and metadata
message QueryRolesResponse {
  repeated Role data = 1;
  QueryMetaResponse meta = 2;
}

// CreateRoleRequest for creating a new role
message CreateRoleRequest {
  string name = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      min_len: 2,
      max_len: 100,
      pattern: "^[a-zA-Z0-9\\s\\-_]+$"
    }
  ];

  string description = 2 [
    (buf.validate.field).string = {
      max_len: 500
    }
  ];
}

// CreateRoleResponse with created role
message CreateRoleResponse {
  Role role = 1;
  string message = 2;
}

// GetRoleRequest for retrieving a single role
message GetRoleRequest {
  string id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      min_len: 14,
      max_len: 20
    }
  ];
}

// GetRoleResponse with role data
message GetRoleResponse {
  Role role = 1;
}

// UpdateRoleRequest for updating role details
message UpdateRoleRequest {
  string id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      min_len: 14,
      max_len: 20
    }
  ];

  string name = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      min_len: 2,
      max_len: 100,
      pattern: "^[a-zA-Z0-9\\s\\-_]+$"
    }
  ];

  string description = 3 [
    (buf.validate.field).string = {
      max_len: 500
    }
  ];
}

// UpdateRoleResponse with updated role
message UpdateRoleResponse {
  Role role = 1;
  string message = 2;
}

// DeleteRoleRequest for deleting a role
message DeleteRoleRequest {
  string id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      min_len: 14,
      max_len: 20
    }
  ];
}

// DeleteRoleResponse with confirmation message
message DeleteRoleResponse {
  string message = 1;
}

// RoleService provides CRUD operations for role management
service RoleService {
  rpc QueryRoles(QueryRolesRequest) returns (QueryRolesResponse) {}
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {}
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse) {}
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse) {}
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {}
}
